fixed bug into scrollbar

--- a/styles/main_styles/horizontal_scrollbar.css
+++ b/styles/main_styles/horizontal_scrollbar.css
@@ -71,3 +71,11 @@
 .flex_scrollbar::-webkit-scrollbar:vertical {
     display: none;
 }
+
+
+
+
+.card-container {
+    display:flex;
+    gap:20px;
+}
